# PlayIntegrityFix

./: .gitmodules
app/src/main/cpp/: CMakeLists.txt  module.cpp
